# HeadDirectedTurning

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
companion/: main.cpp
config/: HeadDirectedTurning.ini
docs/: COMPATIBILITY.md  DIAGNOSTIC_TEST.md
mcm/: README.md
src/: CompanionProtocol.h  GameIntegration.cpp  GameIntegration.h  GazeAlignmentModel.cpp  GazeAlignmentModel.h  OpenVRRuntimePose.cpp  OpenVRRuntimePose.h  PCH.h  PoseMath.cpp  PoseMath.h  Settings.cpp  Settings.h  TurnController.cpp  TurnController.h  TurnModel.cpp  TurnModel.h  Version.h  main.cpp
tests/: TurnModelTests.cpp
